# StreamBase-App

./: README.md
StreamBase-App/: CMakeLists.txt
StreamBase-App/client/: CMakeLists.txt  client.cpp  client_session.hpp  serialization.hpp  session.hpp
StreamBase-App/server/: CMakeLists.txt  server.cpp  server_session.hpp  session.hpp
